# cross-platform-hello-world

./: LICENSE  README.md  __main__.py  cli.py  pyproject.toml
.github/workflows/: build.yml
hello-world/: __main__.py
hello_world/: __init__.py  __main__.py
